# findsquare

./: .gitignore
PointReconstruction/: CMakeLists.txt  ContourTree.h  DecorationAPI.cpp  DecorationAPI.h  DecorationHelper.cpp  DecorationHelper.h  DetectObstacle.cpp  DetectObstacle.h  DllMain.cpp  Front_Main.cpp  PcdDsAPI.h  PlaneCuttingEx.cpp  PlaneCuttingEx.h  PlaneCuttingInterface.h  PlaneSegmentationEx.cpp  PlaneSegmentationEx.h  PlaneSegmentationInterface.h  PointReconstruction.cpp  PointReconstruction.h  PointReconstructionGetConfig.h  RoomMeasurement.cpp  RoomMeasurement.h  concreteMesher.cpp  concreteMesher.h  config_line_room_UNRE.ini  config_room.ini
PointReconstruction/CGAL/: polygonal_surface_reconstruction.h
PointReconstruction/CGAL/internal/: compute_confidences.h  hypothesis.h  point_set_with_planes.h
PointReconstruction/Common/: CheckPreOp.cpp  CheckPreOp.h  Contour.cpp  Contour.h  ContourPre.cpp  ContourPre.h  FindTool.cpp  FindTool.h  LookatOperation.cpp  LookatOperation.h  MathOperation.cpp  MathOperation.h  PlaneStructType.cpp  PlaneStructType.h  StructTypeInfo.h  VariableDefine.h  Voxel.h  buildRefectImgFuc.cpp  buildRefectImgFuc.h  mesh_tool.cpp  mesh_tool.h  util_time.c
PointReconstruction/Common/include/: CommonConfigParse.hpp  ConfigParse.hpp  DataStruct.h  DownSampleFilter.hpp  MathOperation.hpp  ModuleStruct.hpp  bbox.h  common_struct.h  in_out_data.hpp  util_log.hpp  util_math.hpp  util_normalEst.hpp  util_open3d.hpp  util_opencv.hpp  util_time.h  util_time.hpp
PointReconstruction/CreatingMesh/: ReconstructionFromPrependWall.cpp  ReconstructionFromPrependWall.h
PointReconstruction/CutScanPlane/: Design Document of Cut Scan Plane.docx
PointReconstruction/CutScanPlane/DoorWindowDetector/: DetectionHoleClass.cpp  DetectionHoleClass.h  MeasureDoorWindow.cpp  MeasureDoorWindow.h  decn_cond.h  decn_doc.h  decn_tree.h  util_sampler_1d.h
PointReconstruction/CutScanPlane/doc/: doc.h  doc_bim.h  doc_bim_plane.h  doc_manager.h  doc_pc.h  doc_pc_plane.h  state.h  state_bim.h
PointReconstruction/CutScanPlane/models/: proj2d.cpp  proj2d.h  voxel2d.cpp  voxel2d.h
PointReconstruction/CutScanPlane/operations/: bim_clbr.h  bim_filter_plane.cpp  bim_filter_plane.h  bim_intxn.h  bim_loc_roi.cpp  bim_loc_roi.h  bim_proj.cpp  bim_proj.h  script_roi.cpp  script_roi.h
PointReconstruction/CutScanPlane/topology/: topo_edge.h  topo_graph.h  topo_node.h
PointReconstruction/CutScanPlane/utility/: util_img.h  util_line_intersection.h  util_math_near.h  util_pca.h
PointReconstruction/DoorWindowDimension/include/: config.h  plane_seg_inf.h  pxl_struct.h  pxl_struct_inf.h  util_UNRE.hpp  util_line_test.hpp  util_line_tool.hpp
PointReconstruction/DoorWindowDimension/include/edge_dection/: detc_edge.h  detc_edge2d.h  detc_edge_api.h  detc_macro.h  util_edge2d_test.hpp
PointReconstruction/DoorWindowDimension/include/line_extract/: line2d_cfg.hpp  line_extract2d.h  line_extract2d_config.h  line_extract_api.h  line_extract_macro.h  util_line_dist.hpp  util_line_in_plane_test.hpp  util_line_rot.hpp
PointReconstruction/DoorWindowDimension/src/: dw_detc_edge2d.cpp  dw_detc_edgeAPI.cpp  dw_line_extract2d.cpp  dw_line_extract2d_config.cpp  dw_line_extract_api.cpp  dw_util_line_tool.cpp
PointReconstruction/IO/: InOutData.cpp  sDef.cpp
PointReconstruction/IO/include/: InOutData.h  sDef.h
PointReconstruction/Measurement/: AxisLineCheck.cpp  AxisLineCheck.h  MeasureBase.cpp  MeasureBase.h  MeasureDefect.cpp  MeasureDefect.h  MeasureLevelnessRange.cpp  MeasureLevelnessRange.h  OneMeterCheck.cpp  OneMeterCheck.h  OneMeterCheckHelper.cpp  OneMeterCheckHelper.h  PlaneXyRefectImg.cpp  PlaneXyRefectImg.h  WallXZRefectImg.cpp  WallXZRefectImg.h  std_header.h
PointReconstruction/Measurement/RGBD/: Irgbd.h
PointReconstruction/Measurement/RGBD/OptimizeByRGBD/: THandleImgAndEdge.h
PointReconstruction/Measurement/RGBD/RGB2XYZ/: BallsDetection_unre.cpp  BallsDetection_unre.h  ballDetection.cpp  ballDetection.h
PointReconstruction/Mesh/mesher/: ModuleStruct.hpp  detc_edge.h  detc_edge2d.cpp  detc_edge2d.h  detc_edgeAPI.cpp  detc_edge_api.h  detc_macro.h  triangle.c  triangle.h  util_math.hpp  util_opencv.hpp  util_time.hpp  vec2.h  voxel2d_mesh.cpp  voxel2d_mesh.h
PointReconstruction/MultiStage/: StageMatrix.cpp  StageMatrix.h
PointReconstruction/NormalEstimation/: NormalEstimationAPI.cpp  VoxelNormals.cpp  normalEstimation.cpp
PointReconstruction/NormalEstimation/include/: ConstantDefines.h  DownSample.h  MoodycamelQueue.h  SafeQueue.h  TBBConcurrentQueue.h  VoxelNormals.h  concurrentqueue.h  normalEstimation.h
PointReconstruction/PlaneSegmentation/: GeometryFilter.cpp  PlaneMerge.cpp  PlaneSegmentation.cpp  PlaneSegmentationAPI.cpp  PointsGroupPlane.cpp  VoxelBaseClass.cpp  planeConfigParse.cpp
PointReconstruction/PlaneSegmentation/include/: BadVoxelStruct.h  GeometryFilter.h  ParentVoxelStruct.h  PlaneMerge.h  PlaneSegmentation.h  PointsGroupPlane.h  VoxelBaseClass.h  VoxelDbgStruct.h  config.h  planeConfigParse.h  plane_cfg.hpp  util_UNRE.hpp  util_line_in_plane_test.hpp  util_plade_tool.hpp  util_plane_fit.hpp
PointReconstruction/Reconstruction/: Reconstructer.cpp  Reconstructer.h
PointReconstruction/docs/: PointReconstruction_深度技术手册.md  square_mode_design_and_migration.md
PointReconstruction/log/: log.c  log.h
